Working on User CRUD operations

--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Thassign</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- console for mobile -->
+    <!--<script src="//cdn.jsdelivr.net/npm/eruda"></script>-->
+    <!--<script>-->
+    <!--  eruda.init({-->
+    <!--    tool: ['console', 'network']-->
+    <!--  });-->
+    <!--</script>-->
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Thassign</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- console for mobile -->
-  <!--<script src="//cdn.jsdelivr.net/npm/eruda"></script>-->
-  <!--<script>-->
-  <!--  eruda.init({-->
-  <!--    tool: ['console', 'network']-->
-  <!--  });-->
-  <!--</script>-->
-</head>
-
-<body class="mat-typography">
-  <app-root></app-root>
-
-
-</body>
-
+  <body class="mat-typography">
+    <app-root></app-root>
+  </body>
 </html>
